--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "dev": "NODE_ENV=development webpack",
+    "prod": "NODE_ENV=production webpack -p"
   },
   "keywords": [],
   "author": "",
@@ -15,24 +17,41 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-react-css-modules": "^5.0.0",
+    "clean-webpack-plugin": "^2.0.1",
+    "copy-webpack-plugin": "^5.0.1",
     "css-loader": "^2.1.0",
+    "cssnano": "^4.1.10",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "i": "^0.3.6",
+    "image-webpack-loader": "^4.6.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "normalize.css": "^8.0.1",
     "postcss": "^7.0.14",
+    "postcss-calc": "^7.0.1",
+    "postcss-color-function": "^4.0.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-mixins": "^6.2.1",
+    "postcss-nested": "^4.1.2",
+    "postcss-nth-list": "^1.0.2",
     "postcss-preset-env": "^6.5.0",
     "postcss-simple-vars": "^5.0.1",
     "postcss-url": "^8.0.0",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "react-helmet": "^5.2.0",
+    "react-router-dom": "^4.3.1",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-dev-server": "^3.1.14",
+    "webpack-spritesmith": "^1.0.0"
   },
   "dependencies": {
     "react": "^16.8.1",
